Sun Nov 20 17:02:29 CET 2011 - Sebastian Siebert <freespacer@gmx.de>
-------------------------------------------------------------------

- openSUSE 12.1:
  - add search path for dynamic libraries: /usr/X11R6/lib{,64}
- change mode bits 644 => 755 for /usr/lib/*
- add unsupported openSUSE 12.2

Mon Oct 10 08:20:32 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>
-------------------------------------------------------------------

- activate packaging for openSUSE 12.1
- add kernel-debug package in the detecting routine of build script
- rewrite the PowerXpress check routine in the post install script

Fri Sep 30 00:04:15 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>
-------------------------------------------------------------------

- add OpenCL runtime integration (changes in packaging script + spec file)

Fri Aug 19 00:44:15 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>
-------------------------------------------------------------------

- rewrite the KMS Configuration for Tumbleweed and openSUSE 12.1

Thu Jul 28 14:13:23 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>
-------------------------------------------------------------------

- KMS Configuration in Tumbleweed for openSUSE 11.4 is missing
- add to the force mode removing the older fglrx kernel modules
  in fglrx-kernel-build.sh

Thu Jul 14 21:03:41 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>
-------------------------------------------------------------------

- rename variables from ATI to AMD

Thu Jun 30 02:35:23 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>
-------------------------------------------------------------------

- add new KMS Configuration for further openSUSE versions (e.g., 12.1)
- rename from ATI to AMD in some scripts
- add symlink /usr/bin/amdconfig to /usr/bin/aticonfig

-------------------------------------------------------------------
Fri Jun 17 22:17:03 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>

- remove the support of openSUSE 11.2
