@@ -1,3 +1,8 @@
+Sat Jan 07 19:51:51 CET 2012 - Sebastian Siebert <freespacer@gmx.de>
+-------------------------------------------------------------------
+- add auto detection for Balsam Professional
+  - Balsam Professional is based on openSUSE
+
 Sun Nov 20 17:02:29 CET 2011 - Sebastian Siebert <freespacer@gmx.de>
 -------------------------------------------------------------------
 
